fix code blocks stretching tables outside of editor

--- a/packages/renderer/src/components/Views/Editor/styles.scss
+++ b/packages/renderer/src/components/Views/Editor/styles.scss
@@ -109,6 +109,16 @@
         .code-language {
             right: 32px;
         }
+        .code-collapser {
+            right: 32px;
+        }
+
+        pre {
+            code {
+                white-space: pre-wrap !important;
+                word-break: break-all !important;
+            }
+        }
 
         td,
         th {
